tests/tests/ui-unstable/non-lit.stderr
thread 'rustc' panicked at 'argument must be a single string literal', impl/src/lib.rs:66:13
note: Run with `RUST_BACKTRACE=1` for a backtrace.
error: proc macro panicked
  --> $DIR/non-lit.rs:13:5
   |
13 |     indoc!(fail);
   |     ^^^^^^^^^^^^^
   |
   = help: message: argument must be a single string literal

